<resources>
    <string name="app_name">Smart Home Gateway</string>

    <string name="title_activity_smart_home">SmartHome</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="signout">Sign Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">Dashboard</string>
    <string name="sensor_stt">Sensor Status</string>
    <string name="relay_stt">Relay Status and Control</string>
    <string name="automation">Automation</string>
    <string name="configuration">System Settings</string>
    <string name="acc_setting">Account Settings</string>
    <string name="sys">System</string>
    <string name="log_out">Log Out</string>
    <string name="comm">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="voice_com">Voice</string>
    <string name="forgot_username">Forgot username?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="welcome">Welcome to SmartHome Gateway</string>
    <string name="textON">ON</string>
    <string name="textOFF">OFF</string>
    <string name="house_list_config_text">List of available houses:</string>
    <string name="camera">Camera</string>
    <string name="new_board_name_hint">New Name</string>
    <string name="Peripheral_name">Peripheral Name</string>
    <string name="Peripheral_type">Peripheral Type</string>
    <string name="get_model">Get Models/PINs</string>
    <string name="select_condition">Select Condition</string>
    <string name="select_condiperi">Select Condition Peripheral</string>
    <string name="select_actionperi">Select Action Peripheral</string>
    <string name="select_action">Select Action</string>
    <string name="select_cate">Select Peripheral Category</string>
    <string name="currentlist">Current\\nRules</string>
    <string name="your_sensors">Your Sensors</string>
    <string name="your_relays">Your Relays</string>
    <string name="parameter">Parameter</string>
    <string name="action_value">Action Value (If action is not none)</string>

</resources>
