<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dashboard"
            android:icon="@android:drawable/ic_dialog_dialer"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/sensor"
            android:icon="@android:drawable/ic_menu_mylocation"
            android:title="@string/sensor_stt" />
        <item
            android:id="@+id/relay"
            android:icon="@android:drawable/ic_lock_idle_alarm"
            android:title="@string/relay_stt" />
        <item
            android:id="@+id/config"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/configuration" />
        <item
            android:id="@+id/setting"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/acc_setting" />
        <item
            android:id="@+id/system"
            android:icon="@android:drawable/ic_menu_save"
            android:title="@string/sys" />
        <item
            android:id="@+id/out"
            android:icon="@android:drawable/btn_dialog"
            android:title="@string/log_out" />
    </group>

    <item
        android:id="@+id/commu"
        android:title="@string/comm">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
